# bad-snake

./: CMakeLists.txt  README.md  snake-tests.cpp
gmock/: CMakeLists.txt
